Closed Bug 32311 Opened 26 years ago Closed 26 years ago

highlight of text when scrolling dropdown box

Categories

(Core :: Layout: Form Controls, defect, P3)

x86
Linux
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: sitsofe, Assigned: blizzard)

References

()

Details

Steps to reproduce: 1. Visit http://www.city.net/ 2. Click on the dropdown box at the top right (Excite Home) and try to drag scroll down. Expected: List to move down. Result: List moves down but text to the left is hightlighted. Build: 2000031708 Linux
waqar, is this old or new
Assignee: rods → waqar
This is new, I think this is related to blizzards scrollbar fix where one could not scroll the list. Chris could you take a look at this?
Assignee: waqar → blizzard
Status: NEW → ASSIGNED
Fix checked in. The problem was that we were getting motion_notify signals on the window because we were listening for the motion_notify signals on the scrollbar. The event would be rewritten to the window that the mouse was over ( the content area ) and we would start selecting text. We don't listen for motion_notify signals on the scrollbar anymore.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Please ignore the spam. Changing address.
Assignee: blizzard → blizzard
Status: RESOLVED → NEW
bustage from my reassign
Status: NEW → RESOLVED
Closed: 26 years ago26 years ago
Updating QA contact.
QA Contact: ckritzer → bsharma
Verified Build 2001080108 os:Linux7.1
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.